@@ -47,9 +47,13 @@ tasks.withType(JavaExec).configureEach {
 	jvmArgs += ["--add-modules", "jdk.incubator.concurrent"]
 }
 
+tasks.withType(Test).configureEach {
+	jvmArgs += "--enable-preview"
+	jvmArgs += ["--add-modules", "jdk.incubator.concurrent"]
+}
+
 dependencies {
 	implementation project(':hildr-utilities')
-	implementation('net.osslabz.evm:evm-abi-decoder:0.0.6')
 	implementation 'com.github.gestalt-config:gestalt-core:0.20.4'
 	implementation 'com.github.gestalt-config:gestalt-toml:0.20.4'
 
@@ -95,11 +99,10 @@ dependencies {
 		exclude group: 'org.apache.tuweni', module: 'tuweni-rlp'
 		exclude group: 'org.apache.tuweni', module: 'tuweni-crypto'
 	}
+	implementation 'org.bouncycastle:bcprov-jdk18on:1.76'
 
 	implementation 'info.picocli:picocli:4.7.3'
 	annotationProcessor 'info.picocli:picocli-codegen:4.7.3'
-
-	implementation 'io.tmio:tuweni-crypto:2.4.2'
 
 //	implementation fileTree(dir: '../lib', include: '*.jar')
 	// Use JUnit Jupiter for testing.
@@ -240,7 +243,6 @@ tasks.withType(Test).configureEach {
 				"-Djunit.platform.reporting.open.xml.enabled=true",
 				"-Djunit.platform.reporting.output.dir=${outputDir.get().asFile.absolutePath}",
 				"--enable-preview",
-				"--add-modules jdk.incubator.concurrent"
 		]
 	} as CommandLineArgumentProvider)
 }
@@ -261,15 +263,18 @@ javadoc {
 }
 
 jar {
-	dependsOn(configurations.runtimeClasspath)
+	enabled = false
 	manifest {
-		attributes "Main-Class": "io.optimism.HildrBatcher"
+		attributes "Main-Class": "io.optimism.batcher.HildrBatcher"
+		attributes "Multi-Release": "true"
 	}
+	dependsOn(shadowJar)
+}
 
-	duplicatesStrategy = DuplicatesStrategy.WARN
-	from {
-		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-	} {
-		exclude 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.SF'
-	}
+shadowJar {
+	archiveFileName = "${project.name}-${project.version}.jar"
+}
+
+nativeCompile {
+	enabled = false
 }
